--- a/source/sass/blocks/legend.scss
+++ b/source/sass/blocks/legend.scss
@@ -24,7 +24,7 @@
     padding: 0 50px;
     padding-top: 18px;
     position: absolute;
-    max-width: 255px;
+    max-width: 200px;
     left: 0;
     word-break: break-all;
     white-space: inherit;
@@ -35,7 +35,10 @@
   }
 
   @media (min-width: variables.$screen-tablet) {
-    padding: 0 96px;
-    padding-top: 18px;
+    padding: 18px 20px 0 50px;
+  }
+
+  @media (min-width: variables.$screen-desktop) {
+    padding: 18px 20px 0 96px;
   }
 }
