--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -4,3 +4,8 @@
   padding-top: 30px;
   padding-bottom: 30px;
 }
+
+.catalog__list {
+  padding-bottom: 26.5px;
+  border-bottom: 1px solid #ececec;
+}
