--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -60,3 +60,4 @@
 @use "blocks/form-button.scss";
 @use "blocks/catalog.scss";
 @use "blocks/catalog-item.scss";
+@use "blocks/catalog-description.scss";
