--- a/source/sass/blocks/catalog-item.scss
+++ b/source/sass/blocks/catalog-item.scss
@@ -10,18 +10,31 @@
 }
 
 .catalog-item__title {
-  font-size: 17px;
+  font-size: clamp(17px, 5vw, 20px);
   font-weight: 700;
   line-height: 24px;
-  text-align: center;
+  text-align: start;
+  padding-bottom: 10px;
 }
 
 .catalog-item__description {
   color: #444444;
-  font-size: 13px;
+  font-size: clamp(13px, 5vw, 15px);
   line-height: 30px;
   text-align: start;
   padding-bottom: 17.5px;
+}
+
+.catalog-item__price {
+  font-size: clamp(15px, 5vw, 17px);
+  font-weight: 700;
+}
+
+
+.catalog-item__image {
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
 }
 
 .catalog-item__button {
