--- a/source/sass/blocks/transparent-button.scss
+++ b/source/sass/blocks/transparent-button.scss
@@ -8,6 +8,7 @@
   font-size: 18px;
   line-height: 20px;
   text-transform: uppercase;
+  background-color: #ffffff;
   border: 2px solid #444444;
   word-wrap: break-word;
 
