--- a/source/sass/global/mixin.scss
+++ b/source/sass/global/mixin.scss
@@ -10,7 +10,19 @@
 }
 
 @mixin absolute-center {
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+@mixin pseudo ($url, $width, $height) {
+    content: "";
+    display: block;
+    background-image: url($url);
+    background-position: center;
+    background-repeat: no-repeat;
+    width: $width;
+    height: $width;
+    flex-shrink: 0;
 }
