--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -61,3 +61,5 @@
 @use "blocks/catalog.scss";
 @use "blocks/catalog-item.scss";
 @use "blocks/catalog-description.scss";
+@use "blocks/production.scss";
+@use "blocks/video.scss";
