--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -63,3 +63,5 @@
 @use "blocks/catalog-description.scss";
 @use "blocks/production.scss";
 @use "blocks/video.scss";
+@use "blocks/cart-button.scss";
+@use "blocks/catalog-title.scss";
