--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -3,6 +3,10 @@
 .hero {
   @media (min-width: variables.$screen-tablet) {
     padding-bottom: 63px;
+
+    &--catalog {
+      padding-bottom: 0;
+    }
   }
 }
 
