--- a/source/sass/blocks/production.scss
+++ b/source/sass/blocks/production.scss
@@ -9,26 +9,58 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-top: 1px solid #ececec;
-  border-bottom: 1px solid #ececec;
-  padding-bottom: 33px;
-}
 
-.production__video {
-  order: 2;
-
-  &:hover .video__button {
-    transition: width 0.15s;
-    width: 121px;
-    height: 92px;
+  @media (min-width: variables.$screen-tablet) {
+    border-top: none;
   }
 
-  &:active .video__button {
-    width: 81px;
-    height: 62px;
-    opacity: 0.3;
-    transition: width 0.15s;
-    transition: opacity 0.15s;
+  &--video {
+    order: 2;
+
+    @media (min-width: variables.$screen-tablet) {
+      order: 1;
+
+      &:hover + .production__container--description {
+        box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1);
+      }
+
+      &:active + .production__container--description {
+        box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.1);
+      }
+    }
+
+    &:hover .video__button {
+      transition: width 0.15s;
+      width: 121px;
+      height: 92px;
+    }
+
+    &:active .video__button {
+      width: 81px;
+      height: 62px;
+      opacity: 0.3;
+      transition: width 0.15s;
+      transition: opacity 0.15s;
+    }
+  }
+
+  &--description {
+    padding-top: 35px;
+    padding-bottom: 33px;
+    border-bottom: 1px solid #ececec;
+
+    @media (min-width: variables.$screen-tablet) {
+      border: 1px solid #ececec;
+      padding-bottom: 46px;
+
+      &:hover {
+        box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1);
+      }
+
+      &:active {
+        box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.1);
+      }
+    }
   }
 }
 
@@ -37,11 +69,30 @@
   font-weight: 700;
   line-height: 24px;
   display: flex;
-  justify-content: space-between;
+  margin: 0 auto;
   align-items: center;
+  justify-content: center;
   padding: 21px 13px 26.5px 34px;
   gap: 25px;
-  order: 1;
+  border-top: 1px solid #ececec;
+
+  &--tablet {
+    display: none;
+  }
+
+  @media (min-width: variables.$screen-tablet) {
+    margin-right: auto;
+    display: none;
+
+    &--tablet {
+      display: flex;
+      border-top: none;
+      margin: 0;
+      margin-right: auto;
+      padding-top: 0;
+      padding-bottom: 24.5px;
+    }
+  }
 
   &::before {
     @include mixin.pseudo("../img/stack/sprite.svg#video_camera", 32px, 22px);
@@ -51,12 +102,21 @@
 .production__description {
   order: 3;
   color: #444444;
-  font-size: 13px;
-  line-height: 24px;
-  padding: 35px 0 41px 34px;
+  font-size: clamp(13px, 4vw, 15px);
+  line-height: clamp(24px, 4vw, 30px);
+  padding-bottom: 41px;
+  padding-left: 34px;
+
+  @media (min-width: variables.$screen-tablet) {
+    white-space: initial;
+    padding-right: 37px;
+  }
 }
 
 .production__button {
   order: 4;
-  width: 60vw;
+
+  @media (min-width: variables.$screen-tablet) {
+    width: 77vw;
+  }
 }
