--- a/source/sass/global/wrapper.scss
+++ b/source/sass/global/wrapper.scss
@@ -4,6 +4,7 @@
   padding: 0 30px;
   margin: 0 auto;
   text-align: start;
+  max-width: 1150px;
 
   @media (min-width: variables.$screen-tablet) {
     padding: 0 50px;
