--- a/source/sass/blocks/catalog-item.scss
+++ b/source/sass/blocks/catalog-item.scss
@@ -10,6 +10,11 @@
     flex-direction: column;
     justify-content: space-between;
   }
+
+  @media (min-width: variables.$screen-desktop) {
+    display: flex;
+    flex-grow: 1;
+  }
 }
 
 .catalog-item__wrapper {
@@ -18,6 +23,13 @@
   @media (min-width: variables.$screen-tablet) {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    border-bottom: none;
+  }
+
+  @media (min-width: variables.$screen-desktop) {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
   }
 
   @media (hover: hover) and (pointer: fine) {
