--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -14,6 +14,13 @@
     flex-direction: column;
     gap: 54px;
   }
+
+  @media (min-width: variables.$screen-desktop) {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 51px;
+  }
 }
 
 .catalog__item {
@@ -21,5 +28,10 @@
 
   @media (min-width: variables.$screen-tablet) {
     padding-top: 0;
+  }
+
+  @media (min-width: variables.$screen-desktop) {
+    flex-basis: 316px;
+    position: relative;
   }
 }
