--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -63,14 +63,14 @@
     }
   }
 
-  &--form {
+  &--notindex {
     background-image: none;
 
     @media (min-resolution: 2dppx) {
       background-image: none;
     }
 
-    background-color: #e2e2e2;
+    background-color: #f1f1f1;
     min-height: 177px;
     position: relative;
     z-index: 0;
@@ -100,6 +100,12 @@
         height: 34px;
         background-size: cover;
       }
+    }
+  }
+
+  &--catalog {
+    @media (min-width: variables.$screen-desktop) {
+      margin-bottom: 128px;
     }
   }
 }
