--- a/source/sass/blocks/production.scss
+++ b/source/sass/blocks/production.scss
@@ -3,6 +3,12 @@
 
 .production__wrapper {
   padding-bottom: 58px;
+
+
+  @media (min-width: variables.$screen-desktop) {
+    display: flex;
+    padding-bottom: 105px;
+  }
 }
 
 .production__container {
@@ -29,6 +35,12 @@
       }
     }
 
+    @media (min-width: variables.$screen-tablet) {
+      flex-basis: 682.65px;
+      flex-shrink: 0;
+      flex-grow: 1;
+    }
+
     &:hover .video__button {
       transition: width 0.15s;
       width: 121px;
@@ -39,8 +51,7 @@
       width: 81px;
       height: 62px;
       opacity: 0.3;
-      transition: width 0.15s;
-      transition: opacity 0.15s;
+      transition: all 0.15s;
     }
   }
 
@@ -60,6 +71,12 @@
       &:active {
         box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.1);
       }
+    }
+
+    @media (min-width: variables.$screen-desktop) {
+      order: 2;
+      padding-left: 79.1px;
+      align-items: flex-start;
     }
   }
 }
@@ -94,6 +111,18 @@
     }
   }
 
+  @media (min-width: variables.$screen-desktop) {
+    &--tablet {
+      display: block;
+      padding-left: 0;
+      padding-right: 48px;
+    }
+
+    &::before {
+      margin-bottom: 27px;
+    }
+  }
+
   &::before {
     @include mixin.pseudo("../img/stack/sprite.svg#video_camera", 32px, 22px);
   }
@@ -111,6 +140,10 @@
     white-space: initial;
     padding-right: 37px;
   }
+
+  @media (min-width: variables.$screen-desktop) {
+    padding-left: 0;
+  }
 }
 
 .production__button {
@@ -118,5 +151,10 @@
 
   @media (min-width: variables.$screen-tablet) {
     width: 77vw;
+  }
+
+  @media (min-width: variables.$screen-desktop) {
+    width: auto;
+    min-width: 230.2px;
   }
 }
