--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,22 +1,7 @@
 @use "../global/variables.scss";
 
-.contacts {
-  padding-bottom: 39px;
-
-  @media (min-width: variables.$screen-tablet) {
-    padding-bottom: 57px;
-  }
-
-  @media (min-width: variables.$screen-desktop) {
-    display: flex;
-    position: relative;
-    justify-content: center;
-    padding-bottom: 0;
-  }
-}
-
 .contacts__wrapper {
-  padding-top: 38px;
+  padding-top: 42px;
   padding-bottom: 62px;
 
   @media (min-width: variables.$screen-tablet) {
@@ -33,26 +18,43 @@
 }
 
 .contacts__container {
-  @media (min-width: variables.$screen-tablet) {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    column-gap: 10px;
+  &--main {
+    position: relative;
+    padding-bottom: 39px;
+
+    @media (min-width: variables.$screen-tablet) {
+      padding-bottom: 57px;
+    }
+
+    @media (min-width: variables.$screen-desktop) {
+      display: flex;
+      justify-content: center;
+      padding-bottom: 0;
+    }
   }
 
-  @media (min-width: variables.$screen-desktop) {
-    display: block;
-    width: 290px;
-    padding-bottom: 145px;
+  &--adress {
+    @media (min-width: variables.$screen-tablet) {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    @media (min-width: variables.$screen-desktop) {
+      display: block;
+      width: 290px;
+      padding-bottom: 145px;
+    }
   }
 }
 
 .contacts__title {
-  padding-bottom: 28px;
+  padding-bottom: 31px;
+  letter-spacing: -0.5px;
 
   @media (min-width: variables.$screen-tablet) {
     font-size: 43px;
     line-height: 50px;
-    padding-bottom: 49px;
+    padding-bottom: 18px;
   }
 
   @media (min-width: variables.$screen-desktop) {
@@ -98,7 +100,7 @@
 }
 
 .contacts__location {
-  padding-bottom: 42px;
+  padding-bottom: 39px;
 
   @media (min-width: variables.$screen-tablet) {
     padding-bottom: 55px;
