--- a/source/sass/blocks/transparent-button.scss
+++ b/source/sass/blocks/transparent-button.scss
@@ -12,6 +12,30 @@
   border: 2px solid #444444;
   word-wrap: break-word;
 
+  &--week-product {
+    padding-top: 16px;
+    padding-bottom: 13px;
+    top: 0.5px;
+    letter-spacing: -0.6px;
+  }
+
+  &--reviews {
+    padding-top: 16px;
+    padding-bottom: 13px;
+  }
+
+  &--contacts {
+    padding-top: 16px;
+    padding-bottom: 13px;
+  }
+
+  @media (min-width: variables.$screen-tablet) {
+    &--week-product {
+      top: 0.5px;
+      letter-spacing: -0.6px;
+    }
+  }
+
   &:hover {
     transition: 0.2s;
     background-color: #444444;
