--- a/source/sass/blocks/week-product-table.scss
+++ b/source/sass/blocks/week-product-table.scss
@@ -4,6 +4,20 @@
   padding: 10px 0;
   border-bottom: 1px solid #ececec;
   display: flex;
+
+  &--color {
+    padding-bottom: 12.5px;
+  }
+
+  &--diameter {
+    padding-top: 6px;
+    padding-bottom: 13px;
+  }
+
+  &--height {
+    padding-top: 7px;
+    padding-bottom: 12px;
+  }
 }
 
 .week-product-table__description {
@@ -11,9 +25,18 @@
 
   &:first-child {
     flex-basis: 97px;
+    position: relative;
+    right: 2px;
   }
 
   &:last-child {
     flex-basis: 162px;
+  }
+
+  @media (min-width: variables.$screen-tablet) {
+    &:last-child {
+      position: relative;
+      right: 1.5px;
+    }
   }
 }
