--- a/source/sass/blocks/about-us-list.scss
+++ b/source/sass/blocks/about-us-list.scss
@@ -8,6 +8,7 @@
     display: grid;
     grid-template-columns: repeat(2, 310px);
     grid-template-rows: subgrid;
-    column-gap: 1.3vw;
+    column-gap: 3.2vw;
+    row-gap: 25px;
   }
 }
