--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -2,7 +2,7 @@
 
 .hero {
   @media (min-width: variables.$screen-tablet) {
-    padding-bottom: 63px;
+    padding-bottom: 12px;
 
     &--catalog {
       padding-bottom: 0;
@@ -15,25 +15,30 @@
     background-image: url("../img/hero/hero_mobile.webp");
     background-repeat: unset;
     background-position: top;
+    background-position-y: -18px;
     background-size: contain;
     background-color: #f9f9f9;
-    min-height: clamp(520px, 120vw, 746px);
+    min-height: clamp(488px, 120vw, 746px);
     position: relative;
     z-index: 0;
     background-repeat-x: no-repeat;
 
     @media (min-width: variables.$screen-tablet) {
+      background-position-y: 0;
+
       &::after {
         content: "";
         display: block;
         width: 100%;
-        height: 32px;
+        height: 25px;
         background-image: url("../img/zigzag_line_hero.svg");
         background-repeat: repeat-x;
         background-position: bottom;
         z-index: 0;
         position: absolute;
-        bottom: -6px;
+        bottom: -12px;
+        right: 39px;
+        background-size: cover;
       }
     }
 
@@ -127,14 +132,15 @@
 
 .hero__title {
   text-align: center;
-  font-size: clamp(27px, 5vw, 53px);
-  line-height: clamp(30px, 5vw, 57px);
-  padding: 90px 30px 249px;
+  font-size: clamp(27px, 5.5vw, 53px);
+  line-height: clamp(30px, 6.5vw, 57px);
+  padding: 72px 17px 249px;
   width: clamp(260px, 87vw, 668px);
   margin: 0 auto;
 
   @media (min-width: variables.$screen-tablet) {
     padding-top: 154px;
+    letter-spacing: 0.5px;
   }
 
   @media (min-width: variables.$screen-desktop) {
