--- a/source/sass/blocks/size.scss
+++ b/source/sass/blocks/size.scss
@@ -3,7 +3,7 @@
 .size {
   width: clamp(260px, 46.6vw, 350px);
   margin: 0 auto;
-  padding-bottom: 31px;
+  padding-bottom: 22px
 }
 
 .size__list {
@@ -25,7 +25,7 @@
   font-weight: 700;
   line-height: 16px;
   text-transform: uppercase;
-  padding: 18px;
+  padding: 16px;
   background-color: inherit;
   border: 2px solid rgba(68, 68, 68, 0.1);
 
