--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -44,6 +44,13 @@
 
     @media (min-width: variables.$screen-desktop) {
       margin-bottom: 54px;
+
+      &::after {
+        bottom: -22px;
+        right: 0px;
+        background-size: cover;
+        height: 42px;
+      }
     }
 
     @media (min-resolution: 2dppx) {
@@ -145,6 +152,8 @@
 
   @media (min-width: variables.$screen-desktop) {
     width: 700px;
+    padding-top: 156px;
+    letter-spacing: 0px;
   }
 
   &--form {
