--- a/source/sass/blocks/mail-link.scss
+++ b/source/sass/blocks/mail-link.scss
@@ -7,4 +7,10 @@
   text-decoration-color: #62d1ba;
   text-decoration-thickness: 1px;
   text-underline-offset: 6px;
+
+  @media (min-width: variables.$screen-desktop) {
+    text-underline-offset: 13px;
+    position: relative;
+    left: 2px;
+  }
 }
