--- a/source/sass/blocks/week-product.scss
+++ b/source/sass/blocks/week-product.scss
@@ -24,9 +24,11 @@
 
   @media (min-width: variables.$screen-desktop) {
     &::after {
-      height: 23px;
+      height: 22px;
       width: 1050px;
       margin: 0 auto;
+      bottom: -1.5px;
+      right: -2px;
     }
   }
 }
@@ -43,6 +45,7 @@
 
   @media (min-width: variables.$screen-desktop) {
     padding-top: 0;
+    padding-bottom: 72px;
   }
 }
 
@@ -145,7 +148,7 @@
     padding-top: 65px;
     padding-bottom: 35px;
     justify-content: flex-start;
-    gap: 43px;
+    gap: 50px;
     font-size: 53px;
     line-height: 57px;
     padding-left: 25px;
@@ -154,6 +157,10 @@
 
     &::after {
       order: 1;
+      padding: 0;
+      position: relative;
+      left: 7px;
+      top: 8px;
     }
   }
 }
@@ -161,13 +168,13 @@
 .week-product__description {
   padding-bottom: 17px;
   color: #444444;
-  font-size: clamp(15px, 4vw, 17px);
+  font-size: 14px;
   line-height: 24px;
 
   &--price {
     color: #444444;
     text-align: center;
-    font-size: clamp(17px, 5vw, 20px);
+    font-size: 17px;
     font-style: normal;
     font-weight: 700;
     line-height: 24px;
@@ -181,16 +188,22 @@
 
     &--price {
       padding: 0 0 29px;
+      font-size: 20px;
       position: relative;
       right: 2px;
     }
   }
 
   @media (min-width: variables.$screen-desktop) {
+    padding-top: 0.5px;
     padding-bottom: 50px;
+    position: relative;
+    right: 1px;
 
     &--price {
-      padding-bottom: 33px;
+      padding-top: 13px;
+      padding-bottom: 29px;
+      font-size: 17px;
     }
   }
 }
