--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -11,9 +11,7 @@
 
   @media (min-width: variables.$screen-desktop) {
     margin: 0;
-    padding-top: 71px;
-    padding-left: 165px;
-    padding-bottom: 105px;
+    padding: 71px 61px 105px 174px;
   }
 }
 
