--- a/source/sass/blocks/week-product.scss
+++ b/source/sass/blocks/week-product.scss
@@ -185,6 +185,7 @@
   @media (min-width: variables.$screen-tablet) {
     line-height: 30px;
     padding-bottom: 16px;
+    font-size: 17px;
 
     &--price {
       padding: 0 0 29px;
