--- a/source/sass/blocks/color.scss
+++ b/source/sass/blocks/color.scss
@@ -8,7 +8,7 @@
 }
 
 .color__title {
-  padding-bottom: 25px;
+  padding-bottom: 4px;
 }
 
 .color__label {
@@ -35,6 +35,8 @@
     height: 38px;
     border: 2px solid #444444;
     flex-shrink: 0;
+    position: relative;
+    top: -2px;
   }
 
   &::after {
