--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -17,6 +17,8 @@
     padding: 0 30px 44px 175px;
     position: relative;
     z-index: 1;
+    font-size: 17px;
+    line-height: 29px;
   }
 }
 
@@ -35,7 +37,7 @@
   max-width: 600px;
 
   @media (min-width: variables.$screen-desktop) {
-    padding-left: 175px;
+    padding-left: 174px;
     position: relative;
     z-index: 1;
   }
