--- a/source/sass/blocks/add.scss
+++ b/source/sass/blocks/add.scss
@@ -8,6 +8,7 @@
   background-color: inherit;
   border: 2px solid #000000;
   padding: 17px;
+  padding-bottom: 14px;
   width: 100%;
   resize: none;
   color: #444444;
@@ -21,6 +22,11 @@
   &:active {
     transition: border-color 0.2s;
     border-color: #62d1ba;
+  }
+
+  @media (min-width: variables.$screen-desktop) {
+    padding-left: 16px;
+    padding-top: 15px;
   }
 }
 
