--- a/source/sass/blocks/color.scss
+++ b/source/sass/blocks/color.scss
@@ -55,6 +55,8 @@
   }
 
   @media (min-width: variables.$screen-tablet) {
+    gap: 29px;
+
     &::before {
       width: 52px;
       height: 52px;
@@ -75,6 +77,10 @@
 
   @media (min-width: variables.$screen-tablet) {
     padding-top: 15px;
+  }
+
+  @media (min-width: variables.$screen-desktop) {
+    padding-top: 18px;
   }
 }
 
