--- a/source/sass/blocks/copyright-link.scss
+++ b/source/sass/blocks/copyright-link.scss
@@ -30,6 +30,7 @@
   padding: 0 10px;
   position: relative;
   right: 5px;
+  top: -1px;
 
   @media (min-width: variables.$screen-tablet) {
     padding: 0;
@@ -41,6 +42,11 @@
     padding: 0;
     right: 10px;
     bottom: 3px;
+
+    &--form {
+      right: 12px;
+      top: -3px;
+    }
   }
 }
 
