--- a/source/sass/blocks/fieldset.scss
+++ b/source/sass/blocks/fieldset.scss
@@ -20,10 +20,17 @@
       padding-left: 217px;
       display: grid;
       grid-template-columns: repeat(2, 248px);
+      column-gap: 14px;
+      row-gap: 24.4px;
+      position: relative;
+      top: 1px;
     }
 
     @media (min-width: variables.$screen-desktop) {
       grid-template-columns: repeat(auto-fit, 248px);
+      padding-left: 224px;
+      column-gap: 16px;
+      row-gap: 23px;
     }
   }
 
@@ -34,10 +41,12 @@
 
     @media (min-width: variables.$screen-tablet) {
       padding-left: 217px;
+      gap: 25px;
     }
 
     @media (min-width: variables.$screen-desktop) {
       padding-right: 227px;
+      padding-left: 227px;
     }
   }
 
@@ -68,6 +77,7 @@
 
     @media (min-width: variables.$screen-desktop) {
       padding-right: 227px;
+      padding-left: 225px;
     }
   }
 }
