--- a/source/sass/blocks/name.scss
+++ b/source/sass/blocks/name.scss
@@ -11,6 +11,7 @@
   @media (min-width: variables.$screen-tablet) {
     flex-direction: row;
     align-items: center;
+    gap: 24px;
   }
 }
 
@@ -18,6 +19,10 @@
   font-size: 17px;
   font-weight: 700;
   line-height: 18px;
+
+  @media (min-width: variables.$screen-tablet) {
+    font-size: 19px;
+  }
 }
 
 .name__input {
