--- a/source/sass/blocks/type-list.scss
+++ b/source/sass/blocks/type-list.scss
@@ -5,6 +5,10 @@
   flex-direction: column;
   gap: 13px;
 
+  @media (min-width: variables.$screen-tablet) {
+    gap: 26px;
+  }
+
   @media (min-width: variables.$screen-desktop) {
     display: grid;
     grid-template-columns: repeat(1, 500px);
@@ -52,19 +56,23 @@
   }
 
   @media (min-width: variables.$screen-tablet) {
-    gap: 26px;
+    gap: 28px;
 
     &::before {
-      width: 52px;
-      height: 52px;
+      width: 50px;
+      height: 50px;
     }
 
     &::after {
-      width: 22.7px;
-      height: 22.7px;
-      left: 15px;
+      width: 22px;
+      height: 22px;
+      left: 15.2px;
       top: 14px;
     }
+  }
+
+  @media (min-width: variables.$screen-desktop) {
+    left: 7px;
   }
 }
 
