--- a/source/sass/blocks/video.scss
+++ b/source/sass/blocks/video.scss
@@ -8,11 +8,19 @@
 
 .video__picture {
   width: 100%;
+
+  @media (min-width: variables.$screen-desktop) {
+    height: 100%;
+  }
 }
 
 .video__image {
   width: 100%;
   height: 100%;
+
+  @media (min-width: variables.$screen-desktop) {
+    object-fit: cover;
+  }
 }
 
 .video__button {
