--- a/source/sass/blocks/catalog-item.scss
+++ b/source/sass/blocks/catalog-item.scss
@@ -1,7 +1,8 @@
 @use "../global/variables.scss";
 
 .catalog-item__container {
-  padding: 0 30px 26.5px;
+  padding: 0 30px 26.5px 28px;
+  border: 1px solid #ececec;
 
   @media (min-width: variables.$screen-tablet) {
     padding: 27px 33px 25.5px;
@@ -18,7 +19,6 @@
 }
 
 .catalog-item__wrapper {
-  border-bottom: 1px solid #ececec;
 
   @media (min-width: variables.$screen-tablet) {
     display: grid;
@@ -57,7 +57,11 @@
   line-height: 24px;
   text-align: start;
   padding-top: 27.5px;
-  padding-bottom: 10px;
+  padding-bottom: 6px;
+
+  &--toyscart {
+    padding-top: 24px;
+  }
 
   @media (min-width: variables.$screen-tablet) {
     padding-top: 0;
@@ -66,15 +70,17 @@
 
 .catalog-item__description {
   color: #444444;
-  font-size: clamp(13px, 5vw, 15px);
+  font-size: clamp(13px, 4vw, 15px);
   line-height: 30px;
   text-align: start;
   padding-bottom: 17.5px;
 }
 
 .catalog-item__price {
-  font-size: clamp(15px, 5vw, 17px);
+  font-size: clamp(15px, 4vw, 17px);
   font-weight: 700;
+  position: relative;
+  left: -1px;
 }
 
 .catalog-item__image {
@@ -90,8 +96,8 @@
   border: none;
   background-color: transparent;
   position: absolute;
-  right: 0;
-  bottom: -2px;
+  right: -9.5px;
+  bottom: 0px;
   cursor: pointer;
 
   &:hover .cart-button__icon {
