--- a/source/sass/blocks/production.scss
+++ b/source/sass/blocks/production.scss
@@ -58,7 +58,7 @@
   &--description {
     padding-top: 35px;
     padding-bottom: 33px;
-    border-bottom: 1px solid #ececec;
+    border: 1px solid #ececec;
 
     @media (min-width: variables.$screen-tablet) {
       border: 1px solid #ececec;
@@ -91,7 +91,7 @@
   justify-content: center;
   padding: 21px 13px 26.5px 34px;
   gap: 25px;
-  border-top: 1px solid #ececec;
+  border: 1px solid #ececec;
 
   &--tablet {
     display: none;
