--- a/source/sass/blocks/catalog-description.scss
+++ b/source/sass/blocks/catalog-description.scss
@@ -8,4 +8,10 @@
     border-top: 1px solid #ececec;
     position: relative;
   }
+
+  @media (min-width: variables.$screen-tablet) {
+    &--cart {
+      padding-top: 25.5px;
+    }
+  }
 }
