--- a/source/sass/blocks/size.scss
+++ b/source/sass/blocks/size.scss
@@ -3,7 +3,7 @@
 .size {
   width: clamp(260px, 46.6vw, 350px);
   margin: 0 auto;
-  padding-bottom: 22px
+  padding-bottom: 22px;
 }
 
 .size__list {
