--- a/source/sass/blocks/catalog-item.scss
+++ b/source/sass/blocks/catalog-item.scss
@@ -5,7 +5,7 @@
   border: 1px solid #ececec;
 
   @media (min-width: variables.$screen-tablet) {
-    padding: 27px 27px 20.5px;
+    padding: 27px 32px 22.5px;
     border: 1px solid #ececec;
     display: flex;
     flex-direction: column;
@@ -15,6 +15,7 @@
   @media (min-width: variables.$screen-desktop) {
     display: flex;
     flex-grow: 1;
+    padding-bottom: 25.5px;
   }
 }
 
@@ -106,6 +107,7 @@
 .catalog-item__image {
   width: 100%;
   height: 100%;
+  object-fit: cover;
   margin: 0 auto;
 }
 
@@ -117,8 +119,13 @@
   background-color: transparent;
   position: absolute;
   right: -9.5px;
-  bottom: 0px;
+  bottom: 0;
   cursor: pointer;
+
+  @media (min-width: variables.$screen-desktop) {
+    right: -2.5px;
+    bottom: -1px;
+  }
 
   &:hover .cart-button__icon {
     transition: 0.2s;
