--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -47,7 +47,7 @@
 
       &::after {
         bottom: -22px;
-        right: 0px;
+        right: 0;
         background-size: cover;
         height: 42px;
       }
@@ -59,7 +59,6 @@
 
     @media (min-width: 400px) {
       background-image: url("../img/hero/hero_tablet.webp");
-      // background-size: cover;
 
       @media (min-resolution: 2dppx) {
         background-image: url("../img/hero/hero_tablet@2x.webp");
@@ -96,13 +95,13 @@
         display: block;
         width: 100%;
         height: 25px;
-        background-image: url(../img/zigzag_line_hero.svg);
+        background-image: url("../img/zigzag_line_hero.svg");
         background-repeat: repeat-x;
         background-position: bottom;
         z-index: 0;
         position: absolute;
-        bottom: 0px;
-        right: 0px;
+        bottom: 0;
+        right: 0;
         background-size: cover;
       }
     }
@@ -157,7 +156,7 @@
   @media (min-width: variables.$screen-desktop) {
     width: 700px;
     padding-top: 156px;
-    letter-spacing: 0px;
+    letter-spacing: 0;
   }
 
   &--form {
