--- a/source/sass/blocks/production.scss
+++ b/source/sass/blocks/production.scss
@@ -80,6 +80,7 @@
       order: 2;
       padding-left: 79.1px;
       align-items: flex-start;
+      padding-top: 38px;
     }
   }
 }
@@ -121,10 +122,11 @@
       display: block;
       padding-left: 0;
       padding-right: 48px;
+      padding-bottom: 28px;
     }
 
     &::before {
-      margin-bottom: 27px;
+      margin-bottom: 23px;
     }
   }
 
@@ -149,6 +151,7 @@
 
   @media (min-width: variables.$screen-desktop) {
     padding-left: 0;
+    padding-bottom: 52px;
   }
 }
 
