--- a/source/sass/blocks/about-us.scss
+++ b/source/sass/blocks/about-us.scss
@@ -42,3 +42,17 @@
     line-height: 57px;
   }
 }
+
+.about-us__item {
+  @media (min-width: variables.$screen-tablet) {
+    &--money {
+      grid-column: 1 / 2;
+      grid-row: 2 / 3;
+    }
+
+    &--like {
+      grid-column: 1 / 2;
+      grid-row: 3 / 4;
+    }
+  }
+}
