--- a/source/sass/blocks/catalog-item.scss
+++ b/source/sass/blocks/catalog-item.scss
@@ -15,7 +15,9 @@
   @media (min-width: variables.$screen-desktop) {
     display: flex;
     flex-grow: 1;
-    padding-bottom: 25.5px;
+    padding-bottom: 22.5px;
+    padding-left: 27px;
+    padding-top: 26px;
   }
 }
 
