--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -93,13 +93,12 @@
         content: "";
         display: block;
         width: 100%;
-        height: 25px;
+        height: 25.5px;
         background-image: url("../img/zigzag_line_hero.svg");
         background-repeat: repeat-x;
         background-position: bottom;
         z-index: 0;
         position: absolute;
-        bottom: 0;
         right: 0;
         background-size: cover;
       }
@@ -120,6 +119,16 @@
   &--catalog {
     @media (min-width: variables.$screen-desktop) {
       margin-bottom: 110px;
+    }
+  }
+
+  &--form {
+    @media (min-width: variables.$screen-tablet) {
+      margin-bottom: 54px;
+    }
+
+    @media (min-width: variables.$screen-desktop) {
+      margin-bottom: 98px;
     }
   }
 }
